Added new features like validation and disabling pararele chat

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A chat app using WebSockets",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,6 @@
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.19.4"
   }
 }
